release/kgateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: k-gateway
spec:
  gatewayClassName: kgateway
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ecommerce-gateway-routes
spec:
  parentRefs:
  - name: k-gateway
  rules:
  # 1. Email Service gRPC Traffic
  - matches:
    - path:
        type: PathPrefix
        value: /hipstershop.EmailService/
    backendRefs:
    - name: emailservice
      port: 5000

  # 2. Checkout Service gRPC Traffic
  - matches:
    - path:
        type: PathPrefix
        value: /hipstershop.CheckoutService/
    backendRefs:
    - name: checkoutservice
      port: 5050

  # 3. Recommendation Service gRPC Traffic
  - matches:
    - path:
        type: PathPrefix
        value: /hipstershop.RecommendationService/
    backendRefs:
    - name: recommendationservice
      port: 8080

  # 4. Catch-all Frontend UI Web Traffic (Must be last)
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend
      port: 80
